src/objects/Community_Group_Control__c.object
<CustomObject>
    <description>Represents the metadata associated with a Chatter Group that is created in the Community.  Is used to serve up the Group Manager feed separately from the Chatter Group Feed.</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This field defines whether the related group is Active in the Community and visible to users.</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Auto_Follow__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If TRUE, Community Users who share the same Tags as Interests with the group will automatically follow the related group in chatter.</description>
        <label>Auto Follow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Automatic_Archiving__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This field defines whether automatic group archiving rules will apply to the related group.</description>
        <inlineHelpText>This field defines whether automatic group archiving rules will apply to the related group.</inlineHelpText>
        <label>Automatic Archiving</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Chatter_Group_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This defines the 18-digit SFID of the related Chatter Group for the Group Control record.</description>
        <label>Chatter Group ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Defines a description for the Group Control which will also be related to the Chatter Group, if needed.</description>
        <inlineHelpText>Write a brief description of your group.</inlineHelpText>
        <label>Description</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Discoverable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If Discoverable = TRUE, the related Group will be visible in the Community for non-members to view</description>
        <inlineHelpText>If your group is discoverable, other users may find and view the group feed.  If your group is not discoverable, other users will not be able to find the group and members must be added by a group manager.</inlineHelpText>
        <label>Discoverable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Group_Control_SF_ID__c</fullName>
        <description>Represents the 18 digit Salesforce unique ID of the Group Control record.</description>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Represents the 18 digit Salesforce unique ID of the Group Control record.</inlineHelpText>
        <label>Group Control SF ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Image_Path__c</fullName>
        <label>Image Path</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Information__c</fullName>
        <label>Information</label>
        <length>4000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Manager_Group_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field defines whether the Group has an administrative or management group for users to discuss group activities separately from the Group feed.</description>
        <label>Manager Group Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Max_Users__c</fullName>
        <description>Defines the maximum number of users expected to use this Group record, when Purpose = Project/Study Group.</description>
        <inlineHelpText>What is the maximum number of users that will participate in this group?</inlineHelpText>
        <label>Max # Users</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Network__c</fullName>
        <description>This field defines which Community the Chatter Group will be created in.  If there is only one Community, use &quot;Community.&quot; If there are multiple Communities, use the Community Names as values for this field.</description>
        <label>Network</label>
        <picklist>
            <picklistValues>
                <fullName>Internal</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Community</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Purpose__c</fullName>
        <description>This field defines the purpose of the group that is being created for reporting purposes.</description>
        <inlineHelpText>What is the primary purpose for this group?</inlineHelpText>
        <label>Purpose</label>
        <picklist>
            <picklistValues>
                <fullName>Geographic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Residence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Course</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Club</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project/Study Group</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Represents the Status of the Group Control record.</description>
        <inlineHelpText>Represents the Status of the Group Control record.</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Declined</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Archived</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>T_C_Accepted_Date__c</fullName>
        <description>Indicates the Date/Time when the Terms &amp; Conditions page was accepted by the User.</description>
        <inlineHelpText>Indicates the Date/Time when the Terms &amp; Conditions page was accepted by the User.</inlineHelpText>
        <label>T&amp;C Accepted Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>T_C_Accepted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates the Date/Time when the Terms &amp; Conditions page was accepted by the User.</description>
        <inlineHelpText>Indicates the Date/Time when the Terms &amp; Conditions page was accepted by the User.</inlineHelpText>
        <label>T&amp;C Accepted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Terms__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Represents the Group Terms &amp; Conditions record the User accepted.</description>
        <inlineHelpText>Represents the Group Terms &amp; Conditions record the User accepted.</inlineHelpText>
        <label>Terms</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Community_Admins__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Group Terms</value>
            </filterItems>
            <infoMessage>You can only add a record that has a Record Type of Group Terms.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Community_Admins__c</referenceTo>
        <relationshipLabel>Community Group Controls</relationshipLabel>
        <relationshipName>Community_Group_Controls</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Represents the Type of Group that will be created in the system.</description>
        <inlineHelpText>If your group will be public, any user may join.  If your group will be private, members must be added by a group manager.</inlineHelpText>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Private</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Community Group Control</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Discoverable__c</columns>
        <columns>Type__c</columns>
        <columns>Automatic_Archiving__c</columns>
        <columns>Description__c</columns>
        <columns>Chatter_Group_ID__c</columns>
        <columns>Network__c</columns>
        <columns>Status__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Group_Control_SF_ID__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Groups</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Discoverable__c</columns>
        <columns>Purpose__c</columns>
        <columns>Network__c</columns>
        <columns>Status__c</columns>
        <columns>Chatter_Group_ID__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All Groups</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Community Group Controls</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Public_group_should_be_discoverable</fullName>
        <active>true</active>
        <description>When a User selects a Group as Public, this Validation rule prevents the Group from being Undiscoverable.</description>
        <errorConditionFormula>Discoverable__c != true &amp;&amp; ISPICKVAL(Type__c, &apos;Public&apos;)</errorConditionFormula>
        <errorMessage>If the group is Public, it must be discoverable</errorMessage>
    </validationRules>
</CustomObject>